[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/MadStone.gd" type="Script" id=1]
[ext_resource path="res://sprites/mad-stone1.png" type="Texture" id=2]
[ext_resource path="res://sprites/mad-stone2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "mad",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 30.6711, 38.0868 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 24, 272 )

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 32, 37.0842 )

[node name="MadStone" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.189514, -1.42542 )
shape = SubResource( 2 )

[node name="Field of View" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field of View"]
position = Vector2( 0, 272 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.774849, -2.32455 )
shape = SubResource( 4 )

[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="body_entered" from="Field of View" to="." method="_on_Field_of_View_body_entered"]
[connection signal="body_exited" from="Field of View" to="." method="_on_Field_of_View_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
